--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "vite": "^6.3.1",
     "vitest": "^3.1.3"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
