--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "vitest": "^3.1.3"
   },
   "engines": {
-    "node": ">=18.17.1"
+    "node": ">=20.0.0"
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "pnpm@10.9.0+sha256.ea53ab747ac8b7921de63b42eab1adf021e1fe6ded05f62f00885cc33a46118d"
 }
